[metadata]
name = zincsearch
#version = 1.0.0  # see setup.py
author = dabbbby
author_email = dabbbby@163.com
url = https://github.com/dabbbby/zincsearch
description = This is a library for [zincsearch](https://zincsearch-docs.zinc.dev/).
license = MIT
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >= 3.11
zip_safe = False

[options.packages.find]
where = .
